Fixed: votearrow sizing and spacing in comments outside of View Submission.

--- a/src/_comments.css
+++ b/src/_comments.css
@@ -7,6 +7,13 @@ Examples:
 ===============================================================================
 */
 
+/* Votearrows in the comment context (not all of which are in comment-tree). */
+.athing:has(.comment) a .votearrow {
+    --size: 20px; 
+
+    margin-inline: 0 0.5ch;
+}
+
 .comment-tree {
     --comment-margin-top: 0.5rem; 
 
@@ -62,9 +69,8 @@ Examples:
         }
     }
 
+    /* Votearrows in the comment tree context. */
     a .votearrow {
-        --size: 20px; 
-
         margin: var(--comment-margin-top) 1ch 0;
     }
 }
